Fixed polls collapsing when clicking vote button Readded poll collapsing

--- a/static/styles/poll.css
+++ b/static/styles/poll.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
-    align-items: stretch;
+    align-items: flex-start;
     padding: 20px 20px;
 }
 
